--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body {
   margin: 0;
   padding: 0;
 }
+body::after {
+  content: "";
+  background-image: url("japanese-pattern.png"); 
+  opacity: 0.1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 .container {
   font-size: 16px;
   max-width: 800px;
